--- a/GotifyDesktop/Views/MainWindow.xaml
+++ b/GotifyDesktop/Views/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window xmlns="https://github.com/avaloniaui"
+﻿<FluentWindow xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:GotifyDesktop.ViewModels;assembly=GotifyDesktop"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,20 +12,20 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         Width="1200"
         Height="800"
+        Background="#171717"
         x:Class="GotifyDesktop.Views.MainWindow"
         xmlns:local="clr-namespace:GotifyDesktop.Views"
         Name="MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="GotifyDesktop">
-  
 
-    <i:Interaction.Behaviors>
+    <!--<i:Interaction.Behaviors>
       <ia:EventTriggerBehavior EventName="Opened" SourceObject="{Binding MainWindow}">
         <ia:CallMethodAction TargetObject="{Binding}" MethodName="Initialize"/>
       </ia:EventTriggerBehavior>
-    </i:Interaction.Behaviors>
-  
-  <Window.Styles>
+    </i:Interaction.Behaviors>-->
+
+  <FluentWindow.Styles>
     <Style Selector="ListBoxItem">
       <Setter Property="VerticalAlignment" Value="Stretch"/>
       <Setter Property="HorizontalAlignment" Value="Stretch"/>
@@ -35,163 +35,124 @@
       <Setter Property="BorderThickness" Value="0"/>
       <Setter Property="Padding" Value="0"/>
     </Style>
-  </Window.Styles>
-  
-    <!--<Window.Styles>
-      <Style Selector="Button.Round /template/ContentPresenter">
-        <Setter Property="CornerRadius" Value="30"/>
-      </Style>
-
-      <Style Selector="Button">
-        <Setter Property="Foreground" Value="Black" />
-        <Setter Property="BorderThickness" Value="2" />
-        <Setter Property="Background" Value="White" />
-        <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="BorderBrush" Value="#001011"/>
-      </Style>
-
-      <Style Selector="TabControl">
-        <Setter Property="Background" Value="#303030"/>
-      </Style>
-      <Style Selector="TabControl WrapPanel">
-        <Setter Property="Background" Value="#303030"/>
-      </Style>
-
-      <Style Selector="TabItem">
-        <Setter Property="FontSize" Value="12"/>
-        <Setter Property="Height" Value="34"/>
-        <Setter Property="Width" Value="100"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Background" Value="#303030"/>
-        <Setter Property="Foreground" Value="#F0F0F0"/>
-        <Setter Property="Margin" Value="0 0 0 0"/>
-        <Setter Property="Padding" Value="10 0"/>
-      </Style>
-      <Style Selector="TabItem:pointerover /template/ ContentPresenter#PART_ContentPresenter">
-        <Setter Property="Background" Value="#124078"/>
-      </Style>
-
-      <Style Selector="TabItem:focus">
-        <Setter Property="Foreground" Value="#2B579A"/>
-        <Setter Property="Margin" Value="0 0 0 0"/>
-        <Setter Property="Padding" Value="10 0"/>
-      </Style>
-      <Style Selector="TabItem:focus /template/ ContentPresenter#PART_ContentPresenter">
-        <Setter Property="Background" Value="#f0f0f0"/>
-      </Style>
-
-      <Style Selector="TabItem:selected">
-        <Setter Property="Foreground" Value="#2B579A"/>
-        <Setter Property="Margin" Value="0 0 0 0"/>
-        <Setter Property="Padding" Value="10 0"/>
-      </Style>
-      <Style Selector="TabItem:selected /template/ ContentPresenter#PART_ContentPresenter">
-        <Setter Property="Background" Value="#f0f0f0"/>
-      </Style>
-    </Window.Styles>-->
-
-  <!--<Grid>
-    <Grid.RowDefinitions>
-      <RowDefinition Height="1*"/>
-    </Grid.RowDefinitions>
-    <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="1*"/>
-      <ColumnDefinition Width="5*"/>
-    </Grid.ColumnDefinitions>-->
-
-  <SplitView Name="SplitView"
-              PanePlacement="Left"
-              OpenPaneLength="200"
-              CompactPaneLength="50"
-              DisplayMode="CompactInline">
-    <!--DisplayMode="{Binding CurrentDisplayMode}">-->
-    <SplitView.Pane>
-      <Grid>
-        <Grid.RowDefinitions>
-          <RowDefinition Height="Auto" />
-          <RowDefinition Height="*" />
-          <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <!--<Button 
-            Grid.Row="0"
+    <Style Selector="TitleBar:fullscreen">
+      <Setter Property="Background" Value="#7f000000" />
+    </Style>
+  </FluentWindow.Styles>
+ 
+  <Grid>
+    <ExperimentalAcrylicBorder IsHitTestVisible="False">
+      <ExperimentalAcrylicBorder.Material>
+        <ExperimentalAcrylicMaterial TintColor="#161616" MaterialOpacity="0.85" TintOpacity="1" />
+      </ExperimentalAcrylicBorder.Material>
+    </ExperimentalAcrylicBorder>
+    <!--<SplitView Name="SplitView"
+             PanePlacement="Left"
+             OpenPaneLength="200"
+             CompactPaneLength="50"
+             DisplayMode="CompactInline">
+      --><!--DisplayMode="{Binding CurrentDisplayMode}">--><!--
+      <SplitView.Pane>
+        <Grid>
+          <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+          </Grid.RowDefinitions>
+          --><!--<Button 
+            Grid.Row="0"<Tex
             Content="=" 
             FontWeight="Bold" 
             Name="PaneHeader" Data="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
-            Margin="5,12,0,0"/>-->
-        <ToggleButton Name="PaneOpenButton"
-                    Background="Transparent"
-                    Margin="5,12,5,0"
-                    Width="40"
-                    IsChecked="{Binding IsPaneOpen, ElementName=SplitView}">
-          <ToggleButton.Styles>
-            <!--<Style Selector="ToggleButton:pressed  /template/ ContentPresenter#PART_ContentPresenter">
+            Margin="5,12,0,0"/>--><!--
+          <ToggleButton Name="PaneOpenButton"
+                      Background="Transparent"
+                      Margin="5,20,5,0"
+                      Width="40"
+                      IsChecked="{Binding IsPaneOpen, ElementName=SplitView}">
+            <ToggleButton.Styles>
+              --><!--<Style Selector="ToggleButton:pressed  /template/ ContentPresenter#PART_ContentPresenter">
               <Setter Property="Background" Value="Transparent" />
-            </Style>-->
-            <Style Selector="ToggleButton:checked /template/ ContentPresenter#PART_ContentPresenter">
-              <Setter Property="Background" Value="Transparent" />
-            </Style>
-          </ToggleButton.Styles>
-              <Canvas Width="24" Height="24">
-                <Path Fill="{DynamicResource SystemControlForegroundBaseHighBrush}" Data="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
-              </Canvas>
-        </ToggleButton>
-        <ListBox
-          DockPanel.Dock="Left"
-          Margin="5,12,5,0"
-          Background="Transparent"
-          ScrollViewer.VerticalScrollBarVisibility="Disabled"
-          SelectionMode="Single"
-          SelectedItem="{Binding SelectedServer}"
-          BorderThickness="0"
-          Grid.Row="1"
-          Items="{Binding Servers}">
-          <ListBox.ItemTemplate>
-            <DataTemplate>
-              <StackPanel
-                Margin="5,0,5,0"
-                Height="40"
-                Orientation="Horizontal">
-                <Canvas 
-                  Margin="3,0,0,0"
-                  Width="24" 
-                  Height="24">
-                  <Path 
-                    Fill="{DynamicResource SystemControlForegroundBaseHighBrush}"
-                    Data="M13,19H14A1,1 0 0,1 15,20H22V22H15A1,1 0 0,1 14,23H10A1,1 0 0,1 9,22H2V20H9A1,1 0 0,1 10,19H11V17H4A1,1 0 0,1 3,16V12A1,1 0 0,1 4,11H20A1,1 0 0,1 21,12V16A1,1 0 0,1 20,17H13V19M4,3H20A1,1 0 0,1 21,4V8A1,1 0 0,1 20,9H4A1,1 0 0,1 3,8V4A1,1 0 0,1 4,3M9,7H10V5H9V7M9,15H10V13H9V15M5,5V7H7V5H5M5,13V15H7V13H5Z" />
-                </Canvas>
-                <TextBlock
-                  Margin="7,0,0,0"
-                  VerticalAlignment="Center"
-                  Text="{Binding Url}"/>
-              </StackPanel>
-            </DataTemplate>
-          </ListBox.ItemTemplate>
-        </ListBox>
-        <!--Margin="5,12,5,0"-->
-        <Button
-          Background="Transparent"
-          Grid.Row="2"
-          Command="{Binding $parent[local:MainWindow].DataContext.NavigateToSettings}"
-          VerticalContentAlignment="Stretch"
-          HorizontalContentAlignment="Stretch"
-          HorizontalAlignment="Stretch"
-          VerticalAlignment="Stretch">
-          <StackPanel 
-            Orientation="Horizontal"
-            Margin="5,0,5,0">
+            </Style>--><!--
+              <Style Selector="ToggleButton:checked /template/ ContentPresenter#PART_ContentPresenter">
+                <Setter Property="Background" Value="Transparent" />
+              </Style>
+            </ToggleButton.Styles>
             <Canvas Width="24" Height="24">
-              <Path Fill="{DynamicResource SystemControlForegroundBaseHighBrush}" Data="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.67 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z" />
+              <Path Fill="{DynamicResource SystemControlForegroundBaseHighBrush}" Data="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
             </Canvas>
-            <TextBlock
-              Margin="12,4,0,0">Settings</TextBlock>
-          </StackPanel>
-        </Button>
+          </ToggleButton>
+          <ListBox
+            DockPanel.Dock="Left"
+            Margin="5,12,5,0"
+            Background="Transparent"
+            ScrollViewer.VerticalScrollBarVisibility="Disabled"
+            SelectionMode="Single"
+            SelectedItem="{Binding SelectedServer}"
+            BorderThickness="0"
+            Grid.Row="1"
+            Items="{Binding Servers}">
+            <ListBox.ItemTemplate>
+              <DataTemplate>
+                <StackPanel
+                  Margin="6,0,5,0"
+                  Height="40"
+                  Orientation="Horizontal"
+                  ToolTip.Tip="{Binding Url}">
+                  <Canvas
+                    Margin="3,0,0,0"
+                    Width="24"
+                    Height="24">
+                    <Path
+                      Fill="{DynamicResource SystemControlForegroundBaseHighBrush}"
+                      Data="M13,19H14A1,1 0 0,1 15,20H22V22H15A1,1 0 0,1 14,23H10A1,1 0 0,1 9,22H2V20H9A1,1 0 0,1 10,19H11V17H4A1,1 0 0,1 3,16V12A1,1 0 0,1 4,11H20A1,1 0 0,1 21,12V16A1,1 0 0,1 20,17H13V19M4,3H20A1,1 0 0,1 21,4V8A1,1 0 0,1 20,9H4A1,1 0 0,1 3,8V4A1,1 0 0,1 4,3M9,7H10V5H9V7M9,15H10V13H9V15M5,5V7H7V5H5M5,13V15H7V13H5Z" />
+                  </Canvas>
+                  <TextBlock
+                    Margin="7,0,0,0"
+                    VerticalAlignment="Center"
+                    Text="{Binding Url}"/>
+                </StackPanel>
+              </DataTemplate>
+            </ListBox.ItemTemplate>
+          </ListBox>
+          --><!--Margin="5,12,5,0"--><!--
+          <Button
+            Background="Transparent"
+            Grid.Row="2"
+            Command="{Binding $parent[local:MainWindow].DataContext.NavigateToSettings}"
+            VerticalContentAlignment="Stretch"
+            HorizontalContentAlignment="Stretch"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch">
+            <StackPanel
+              Orientation="Horizontal"
+              Margin="5,0,5,0">
+              <Canvas Width="24" Height="24">
+                <Path Fill="{DynamicResource SystemControlForegroundBaseHighBrush}" Data="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.67 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z" />
+              </Canvas>
+              <TextBlock
+                Margin="12,4,0,0">Settings</TextBlock>
+            </StackPanel>
+          </Button>
+        </Grid>
+      </SplitView.Pane>
+      <Grid>
+        <reactiveUi:RoutedViewHost 
+          Grid.Column="1"
+          Margin="0,30,0,0"
+          Router="{Binding Router}">
+          <reactiveUi:RoutedViewHost.DefaultContent>
+            <TextBlock Text="Default Content" />
+          </reactiveUi:RoutedViewHost.DefaultContent>
+        </reactiveUi:RoutedViewHost>
       </Grid>
-    </SplitView.Pane>
-    <reactiveUi:RoutedViewHost Grid.Column="1" Router="{Binding Router}">
+    </SplitView>-->
+    <reactiveUi:RoutedViewHost
+      Margin="0,30,0,0"
+      Router="{Binding Router}">
       <reactiveUi:RoutedViewHost.DefaultContent>
         <TextBlock Text="Default Content" />
       </reactiveUi:RoutedViewHost.DefaultContent>
     </reactiveUi:RoutedViewHost>
-  </SplitView>
-</Window>
+  </Grid>
+</FluentWindow>
