--- a/GotifyDesktop/Views/ServerView.xaml
+++ b/GotifyDesktop/Views/ServerView.xaml
@@ -16,14 +16,47 @@
       <Setter Property="BorderThickness" Value="0"/>
       <Setter Property="Padding" Value="0"/>
     </Style>
+    <Style Selector="Button.toolbar">
+      <Setter Property="Margin" Value="9,3,9,3"/>
+      <Setter Property="Width" Value="40"/>
+      <Setter Property="Height" Value="40"/>
+      <Setter Property="BorderThickness" Value="0"/>
+      <Setter Property="Background" Value="Transparent"/>
+      <Setter Property="Padding" Value="6"/>
+    </Style>
+    <Style Selector="Button.toolbar /template/ ContentPresenter">
+      <Setter Property="CornerRadius" Value="20"/>
+    </Style>
+    <Style Selector="Button:pointerover.toolbar /template/ ContentPresenter">
+      <Setter Property="Background" Value="#80e0e0e0"/>
+    </Style>
   </UserControl.Styles>
 
-  <DockPanel>
+  <Grid>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="80"/>
+    </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="*"/>
+      <ColumnDefinition Width="80"/>
+    </Grid.ColumnDefinitions>
+    <DockPanel Grid.Column="0"
+               Grid.Row="0"
+               Grid.RowSpan="2"
+               Grid.ColumnSpan="2">
+      <Button Content="Settings"
+              Command="{Binding GoToSettings}"
+              DockPanel.Dock="Bottom"
+              Background="Transparent"
+              MinWidth="150"
+              MaxWidth="300"
+              HorizontalContentAlignment="Center"/>
       <ListBox
         DockPanel.Dock="Left"
-        ScrollViewer.VerticalScrollBarVisibility="Disabled" 
+        ScrollViewer.VerticalScrollBarVisibility="Disabled"
         MinWidth="150"
-        SelectionMode="Single" 
+        SelectionMode="Single"
         SelectedItem="{Binding SelectedItem}"
         BorderThickness="0"
         Grid.Row="0"
@@ -33,27 +66,20 @@
         <ListBox.ItemTemplate>
           <DataTemplate>
             <Button
-              Background="Transparent"
               BorderThickness="0"
+              Height="40"
               HorizontalAlignment="Stretch"
               VerticalAlignment="Stretch"
               VerticalContentAlignment="Stretch"
               HorizontalContentAlignment="Stretch"
               IsHitTestVisible="False"
               Command="{Binding $parent[local:ServerView].DataContext.Apply}"
-                CommandParameter="{Binding #MyTextBlock.Text}">
+              CommandParameter="{Binding #MyTextBlock.Text}">
               <Grid>
                 <Grid.ColumnDefinitions>
                   <ColumnDefinition Width="1*"/>
-                  <ColumnDefinition Width="1*"/>
+                  <ColumnDefinition Width="15"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock
-                  x:Name="MyTextBlock"
-                  Height="32"
-                  FontSize="20"
-                  Text="{Binding name}"
-                  Grid.Column="0"
-                  HorizontalAlignment="Left"/>
                 <Image
                   Source="avares://GotifyDesktop/Assets/Alert-Light.ico"
                   Height="16"
@@ -63,51 +89,64 @@
                   Grid.Column="1"
                   IsVisible="{Binding HasAlert}"
                   HorizontalAlignment="Right"/>
+                <TextBlock
+                  x:Name="MyTextBlock"
+                  Height="30"
+                  Margin="0,5,0,0"
+                  FontSize="20"
+                  Text="{Binding Name}"
+                  Grid.Column="0"
+                  VerticalAlignment="Center"
+                  HorizontalAlignment="Left"/>
               </Grid>
             </Button>
           </DataTemplate>
         </ListBox.ItemTemplate>
       </ListBox>
-    <local:AlertMessageView
-      DataContext="{Binding AlertMessageViewModel}"
-      IsVisible="{Binding IsDisplayVisible, FallbackValue=true}"
-      DockPanel.Dock="Top">
-    </local:AlertMessageView>
+      
+      <local:AlertMessageView
+        DataContext="{Binding AlertMessageViewModel}"
+        IsVisible="{Binding IsDisplayVisible, FallbackValue=false}"
+        DockPanel.Dock="Top">
+      </local:AlertMessageView>
       <ScrollViewer Grid.Column="1" Grid.Row="1" DockPanel.Dock="Right">
-        <ItemsControl 
-                      Grid.Row="1"
-                      BorderThickness="0"
-                      Grid.Column="1"
-                      Items="{Binding MessageModels}">
+        <ItemsControl
+            Grid.Row="1"
+            Grid.Column="1"
+            Items="{Binding MessageModels}">
           <ItemsControl.ItemTemplate>
-            <DataTemplate>  
+            <DataTemplate>
               <Border HorizontalAlignment="Center"
+                Background="#424242"
                 MinWidth="600"
+                BoxShadow="1 1 1 1 Black"
                 MaxWidth="600"
                 Margin="10"
                 BorderThickness="2"
                 CornerRadius="3"
                 Padding="4">
-                <DockPanel>
+                <DockPanel Margin="5">
                   <Image Source="avares://GotifyDesktop/Assets/defaultapp.png"
                          Height="64"
                          Width="64"
                          DockPanel.Dock="Left">
                   </Image>
-                  <TextBlock 
-                             DockPanel.Dock="Top"
-                             Height="32"
-                             TextWrapping="Wrap"
-                             FontSize="20"
-                             HorizontalAlignment="Left"
-                             Text="{Binding title}">
+                  <TextBlock
+                    DockPanel.Dock="Top"
+                    Height="32"
+                    TextWrapping="Wrap"
+                    FontSize="20"
+                    Margin="15,0,0,0"
+                    HorizontalAlignment="Left"
+                    Text="{Binding title}">
                   </TextBlock>
-                  <TextBlock 
-                             DockPanel.Dock="Bottom"
-                             TextWrapping="Wrap"
-                             HorizontalAlignment="Left"
-                             FontSize="14"
-                             Text="{Binding message}">
+                  <TextBlock
+                    Margin="15,0,0,0"
+                    DockPanel.Dock="Bottom"
+                    TextWrapping="Wrap"
+                    HorizontalAlignment="Left"
+                    FontSize="14"
+                    Text="{Binding message}">
                   </TextBlock>
                 </DockPanel>
               </Border>
@@ -116,4 +155,5 @@
         </ItemsControl>
       </ScrollViewer>
     </DockPanel>
+  </Grid>
 </UserControl>
