--- a/GotifyDesktop/Views/SettingsView.xaml
+++ b/GotifyDesktop/Views/SettingsView.xaml
@@ -13,23 +13,30 @@
     </Grid.RowDefinitions>
     <StackPanel Orientation="Horizontal">
       <Button Command="{Binding Back}"
-              Background="Transparent"
-              Content="---" />
+              Background="Transparent">
+        <Image
+                Source="avares://GotifyDesktop/Assets/Back-Light.ico"
+                Height="16"
+                Width="16"
+                DockPanel.Dock="Right"
+                Margin="5"
+                Grid.Column="1"
+                HorizontalAlignment="Right"/>
+      </Button>
       <TextBlock Grid.Row="0"
            Text="Settings"
            VerticalAlignment="Center"
            FontSize="25"/>
     </StackPanel>
-
     <TabControl Grid.Row="1"
                 TabStripPlacement="Left">
-      <TabItem Header="Servers" Width="150">
+      <TabItem Header="Server" Width="150">
           <local:AddServerView Margin="10"
             DataContext="{Binding AddServerViewModel}"/>
       </TabItem>
-      <TabItem Header="Options">
-        <local:OptionsView DataContext="{Binding OptionsViewModel}"/>
-      </TabItem>
+      <!--<TabItem Header="Options">
+        <local:OptionsView DataContext="{Binding OptionsViewModel}/>
+      </TabItem>-->
     </TabControl>
     <Grid Grid.Row="2">
       <Grid.ColumnDefinitions>
