--- a/GotifyDesktop/App.xaml
+++ b/GotifyDesktop/App.xaml
@@ -7,8 +7,11 @@
     </Application.DataTemplates>
 
     <Application.Styles>
+        <FluentTheme Mode="Dark"/>
+    </Application.Styles>
+    <!--<Application.Styles>
       <StyleInclude Source="avares://Avalonia.Themes.Fluent/Accents/FluentDark.xaml"/>
       <StyleInclude Source="avares://Avalonia.Themes.Fluent/Accents/BaseDark.xaml"/>
       <StyleInclude Source="avares://Avalonia.Themes.Fluent/Accents/Base.xaml"/>
-    </Application.Styles>
+    </Application.Styles>-->
 </Application>
