second rollup commit

--- a/GotifyDesktop/Views/MainWindow.xaml
+++ b/GotifyDesktop/Views/MainWindow.xaml
@@ -1,16 +1,17 @@
-﻿<Window xmlns="https://github.com/avaloniaui"
+﻿<controls:Window  
+    xmlns:controls="clr-namespace:Avalonia.Controls;assembly=Avalonia.Controls"
+    xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:aj551.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-    Width="1200"
-    Height="800"
-    Background="#171717"
-    x:Class="GotifyDesktop.Views.MainWindow"
-    Name="MainWindow"
-    Icon="/Assets/avalonia-logo.ico"
-    Title="GotifyDesktop">
+        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        Width="1200"
+        Height="800"
+        Background="#171717"
+        x:Class="GotifyDesktop.Views.MainWindow"
+        Name="MainWindow"
+        Icon="/Assets/avalonia-logo.ico"
+        Title="GotifyDesktop">
 
     <!--<i:Interaction.Behaviors>
       <ia:EventTriggerBehavior EventName="Opened" SourceObject="{Binding MainWindow}">
@@ -146,7 +147,7 @@
           </reactiveUi:RoutedViewHost.DefaultContent>
         </reactiveUi:RoutedViewHost>
       </Grid>
-    </SplitView>-->
+    </SplitView>--><!--
     <reactiveUi:RoutedViewHost
       Margin="0,0,0,0"
       Grid.Row="1"
@@ -154,6 +155,6 @@
       <reactiveUi:RoutedViewHost.DefaultContent>
         <TextBlock Text="Default Content" />
       </reactiveUi:RoutedViewHost.DefaultContent>
-    </reactiveUi:RoutedViewHost>
+    </reactiveUi:RoutedViewHost>-->
   </Grid>
-</Window>
+</controls:Window>
