--- a/GotifyDesktop/App.xaml
+++ b/GotifyDesktop/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application xmlns="https://github.com/avaloniaui"
+﻿<!--<Application  xmlns:fluent="clr-namespace:Avalonia.Themes.Fluent;assembly=Avalonia.Themes.Fluent" xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:GotifyDesktop"
              x:Class="GotifyDesktop.App">
@@ -7,11 +7,11 @@
     </Application.DataTemplates>
 
     <Application.Styles>
-        <FluentTheme Mode="Dark"/>
+        <fluent:FluentTheme Mode="Dark"/>
     </Application.Styles>
-    <!--<Application.Styles>
+    --><!--<Application.Styles>
       <StyleInclude Source="avares://Avalonia.Themes.Fluent/Accents/FluentDark.xaml"/>
       <StyleInclude Source="avares://Avalonia.Themes.Fluent/Accents/BaseDark.xaml"/>
       <StyleInclude Source="avares://Avalonia.Themes.Fluent/Accents/Base.xaml"/>
-    </Application.Styles>-->
-</Application>
+    </Application.Styles>--><!--
+</Application>-->
